--- a/style.css
+++ b/style.css
@@ -3,4 +3,5 @@ div {
     width: 250px;
     background-color: red;
     margin-top: 20px;
+    background-image: url("https://media4.giphy.com/media/UuH7UJfiv2qdDdjC0e/giphy.gif");
 }
